# Perilune

./: .env.example  .gitattributes  .gitignore  AGENTS.md  BackgroundInfo.md  Info.md  README.md  mukbangchallengeKOI.csv  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.vite/vitest/: results.json
data/processed/: catalog_merged.csv  features.parquet
docs/: integrations.md  plan.md  references.md
src/: __init__.py
src/api/: main.py
src/common/: __init__.py
src/models/: __init__.py  baseline.py  gbm.py
src/perilune.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pipelines/: __init__.py  bls.py  catalogs.py  features.py  fetch_data.py  lightcurves.py
tests/api/: test_main.py
tests/models/: test_baseline.py  test_gbm.py
tests/pipelines/: test_bls.py  test_catalogs.py  test_features.py  test_fetch_data.py
webapp/: next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
webapp/app/: layout.tsx  page.tsx
webapp/app/about/: page.tsx
webapp/app/how-it-works/: page.tsx
webapp/components/: BackgroundOrbits.tsx  DataTablePlaceholder.tsx  GraphPlaceholder.tsx  LightCurveGraph.tsx  NotesPanel.tsx  PeriodogramGraph.tsx  PhaseFoldedGraph.tsx  PredictionForm.tsx  PredictionResult.tsx  TopNav.tsx
webapp/lib/: api.ts
webapp/styles/: globals.css
webapp/tests/: api.test.ts
