[project]
name = "perilune"
version = "0.0.1"
description = "Perilune backend scaffolding for exoplanet discovery"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Perilune Team" }]
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.6,<3",
    "numpy>=1.26,<2",
    "pandas>=2.2,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
astro = [
    "lightkurve>=2.4,<3",
    "astropy>=6,<7",
]
ml = [
    "scikit-learn>=1.4,<2",
    "xgboost>=2.0,<3",
    "lightgbm>=4.3,<5",
]
dev = [
    "pytest>=8,<9",
    "ruff>=0.5,<1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

